<resources>
    <string name="app_name">KJumpBLE</string>

    <string name="to_turn_on_ble">Please turn on bluetooth.</string>
    <string name="to_turn_on_location">Please turn on gps.</string>
    <string name="to_get_location_permission">Please turn on location permission.</string>
    <string name="to_get_nearby_devices_permission">Please turn on nearby devices permission.</string>
    <string name="start_scan">Start Scan</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="do_nothing">Do nothing</string>
    <string name="scanning">Scanning…</string>
    <string name="connecting">Connecting…</string>

    <string name="get_number_of_data">Get number of data</string>
    <string name="get_user_index">Get user index</string>
    <string name="read_latest_memory">Read latest memory</string>
    <string name="read_all_memory">Read all memory</string>
    <string name="clear_all_data">Clear all data</string>

    <string name="write_clock_time">Write clock time</string>
    <string name="write_clock_flag">Write clock show flag</string>
    <string name="write_clock_time_and_flag">Write clock time and show flag</string>

    <string name="write_reminder_clock_time">Write reminder clock time</string>
    <string name="write_reminder_clock_flag">Write reminder clock flag</string>
    <string name="write_reminder_clock_time_and_flag">Write reminder clock time and flag</string>

    <string name="write_temperature_unit">Write temperature unit</string>

    <string name="set_device">Set Device</string>



<!--    kp    -->
    <string name="read_kp_memory">Read kp memory</string>
    <string name="read_number_of_memory">Read number of memory</string>
    <string name="kp_set_device">Set kp device</string>
    <string name="write_kp_time">Write KP time</string>

    <string name="start_kp_sense">Start sense</string>
    <string name="stop_kp_sense">Stop sense</string>
    <string name="kp_clear_memory">clear memory</string>
    <string name="kp_change_mode">change mode</string>
<!--    kd-2070 -->
    <string name="read_settings">Read settings</string>
    <string name="read_index_memory">Read index memory</string>
    <string name="write_hand">Write hand</string>
    <string name="write_unit">Write unit</string>
</resources>