<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <Button
        android:id="@+id/readNumberOfMemoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_number_of_memory"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.00" />

    <Button
        android:id="@+id/readMemoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_kp_memory"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readNumberOfMemoryButton"
        app:layout_constraintVertical_bias="0.00" />

    <Button
        android:id="@+id/writeKPReminderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_kp_reminder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readMemoryButton"
        app:layout_constraintVertical_bias="0.00" />

    <Button
        android:id="@+id/writeKPTimeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_kp_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writeKPReminderButton"
        app:layout_constraintVertical_bias="0.00" />

    <Button
        android:id="@+id/startSenseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_kp_sense"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writeKPTimeButton"
        app:layout_constraintVertical_bias="0.00" />

    <Button
        android:id="@+id/stopSenseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_kp_sense"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startSenseButton"
        app:layout_constraintVertical_bias="0.00" />

</androidx.constraintlayout.widget.ConstraintLayout>